--- a/exhibition/about.html
+++ b/exhibition/about.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./assets/styles/utils.css">
-  <link rel="stylesheet" href="./assets/styles/navbar.css">
-  <link rel="stylesheet" href="./assets/styles/about.css">
-  <link rel="stylesheet" href="./assets/styles/mission.css">
-  <link rel="stylesheet" href="./assets/styles/footer.css">
+  <link rel="stylesheet" href="Public/assets/styles/utils.css">
+  <link rel="stylesheet" href="Public/assets/styles/navbar.css">
+  <link rel="stylesheet" href="Public/assets/styles/about.css">
+  <link rel="stylesheet" href="Public/assets/styles/mission.css">
+  <link rel="stylesheet" href="Public/assets/styles/footer.css">
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -25,7 +25,7 @@
   <header>
 
     <div class="logo">
-      <a href="/"><img src="/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
+      <a href="/"><img src="Public/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
     </div>
 
     <nav>
@@ -84,7 +84,7 @@
 
 
       <div class="footer-logo">
-        <img src="./assets/images/logo.png" alt="VirtualXLab Logo" />
+        <img src="Public/assets/images/logo.png" alt="VirtualXLab Logo" />
         <p>Empowering Future Scientists with Virtual Exploration</p>
       </div>
 
@@ -129,8 +129,8 @@
 
 
 
-  <script type="module" src="./assets/scripts/aobut3d.js"></script>
-  <script type="module" src="./assets/scripts/navbar.js"></script>
+  <script type="module" src="Public/assets/scripts/aobut3d.js"></script>
+  <script type="module" src="Public/assets/scripts/navbar.js"></script>
 </body>
 
 </html>
