--- a/exhibition/contact.html
+++ b/exhibition/contact.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | VirtualX Lab</title>
 
-  <link rel="stylesheet" href="./assets/styles/utils.css" />
-  <link rel="stylesheet" href="./assets/styles/navbar.css" />
-  <link rel="stylesheet" href="./assets/styles/contact.css">
+  <link rel="stylesheet" href="Public/assets/styles/utils.css" />
+  <link rel="stylesheet" href="Public/assets/styles/navbar.css" />
+  <link rel="stylesheet" href="Public/assets/styles/contact.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <script defer src="./assets/scripts/navbar.js"></script>
+  <script defer src="Public/assets/scripts/navbar.js"></script>
 
   
 </head>
@@ -21,7 +21,7 @@
 
   <header>
     <div class="logo">
-      <a href="/"><img src="/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
+      <a href="/"><img src="Public/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
     </div>
 
     <nav>
@@ -69,8 +69,8 @@
 
   <canvas id="webgl"></canvas>
 
-  <script type="module" src="./assets/scripts/contact3d.js"></script>
-  <script type="module" src="./assets/scripts/formSubmit.js"></script>
+  <script type="module" src="Public/assets/scripts/contact3d.js"></script>
+  <script type="module" src="Public/assets/scripts/formSubmit.js"></script>
 </body>
 
 </html>
