--- a/exhibition/index.html
+++ b/exhibition/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VirtualX Lab</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/styles/utils.css">
-  <link rel="stylesheet" href="./assets/styles/navbar.css">
-  <link rel="stylesheet" href="./assets/styles/hero.css">
+  <link rel="stylesheet" href="Public/assets/styles/utils.css">
+  <link rel="stylesheet" href="Public/assets/styles/navbar.css">
+  <link rel="stylesheet" href="Public/assets/styles/hero.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!-- <script type="module" src="./assets/scripts/lab.js"></script> -->
-  <script type="module" src="./assets/scripts/home3d.js"></script>
+  <!-- <script type="module" src="/assets/scripts/lab.js"></script> -->
+  <script type="module" src="Public/assets/scripts/home3d.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   <header>
 
     <div class="logo">
-      <a href="/"><img src="/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
+      <a href="/"><img src="Public/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
     </div>
 
     <nav>
@@ -59,7 +59,7 @@
   </section>
 
 
-  <script type="module" src="./assets/scripts/navbar.js"></script>
+  <script type="module" src="Public/assets/scripts/navbar.js"></script>
 
 </body>
 
