--- a/exhibition/lab.html
+++ b/exhibition/lab.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VirtualX Lab</title>
-  <link rel="stylesheet" href="./assets/styles/utils.css">
-  <link rel="stylesheet" href="./assets/styles/navbar.css">
-  <link rel="stylesheet" href="./assets/styles/microscope.css">
-  <link rel="stylesheet" href="./assets/styles/chemicals.css">
-  <link rel="stylesheet" href="./assets/styles/lab.css">
-  <link rel="stylesheet" href="./assets/styles/footer.css">
+  <link rel="stylesheet" href="Public/assets/styles/utils.css">
+  <link rel="stylesheet" href="Public/assets/styles/navbar.css">
+  <link rel="stylesheet" href="Public/assets/styles/microscope.css">
+  <link rel="stylesheet" href="Public/assets/styles/chemicals.css">
+  <link rel="stylesheet" href="Public/assets/styles/lab.css">
+  <link rel="stylesheet" href="Public/assets/styles/footer.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -275,7 +275,7 @@
 
     <div id="lensOverlay" class="lens-overlay">
       <div class="lens-content">
-        <video id="microscopeVideo" src="./assets/videos/bacteria.mp4" autoplay muted loop></video>
+        <video id="microscopeVideo" src="Public/assets/videos/bacteria.mp4" autoplay muted loop></video>
       </div>
       <button id="closeLensBtn">Close</button>
     </div>
@@ -283,18 +283,18 @@
     <div class="items-container">
       <p class="bacteria">Bacteria</p>
       <div class="microscope-items">
-        <video src="./assets/videos/bacteria.mp4">Bacteria</video>
+        <video src="Public/assets/videos/bacteria.mp4">Bacteria</video>
       </div>
 
       <p class="molecules">Molecules</p>
       <div class="microscope-items">
-        <video src="./assets/videos/cells.webm">Molecules</video>
+        <video src="Public/assets/videos/cells.webm">Molecules</video>
       </div>
 
       <p class="genes">Genes</p>
       <div class="microscope-items">
 
-        <video src="./assets/videos/genes.webm">Genes</video>
+        <video src="Public/assets/videos/genes.webm">Genes</video>
 
       </div>
 
@@ -308,8 +308,8 @@
     <h2 class="section-title">Chemical Reactions</h2>
     <div class="reaction-cards">
 
-      <div class="reaction-card" data-video="./assets/videos/Chemicals/phenolphthalein.mp4">
-        <img src="./assets/images/Chemicals/Phenolphthalein.jpeg" />
+      <div class="reaction-card" data-video="Public/assets/videos/Chemicals/phenolphthalein.mp4">
+        <img src="Public/assets/images/Chemicals/Phenolphthalein.jpeg" />
         <h3>Phenolphthalein Reaction</h3>
         <div class="card-buttons">
           <a href="#" class="btn docs">Read Docs</a>
@@ -317,8 +317,8 @@
         </div>
       </div>
 
-      <div class="reaction-card" data-video="./assets/videos/Chemicals/copperammonia.mp4">
-        <img src="./assets/images/Chemicals/copper.jpeg" />
+      <div class="reaction-card" data-video="Public/assets/videos/Chemicals/copperammonia.mp4">
+        <img src="Public/assets/images/Chemicals/copper.jpeg" />
         <h3>Copper + Ammonia</h3>
         <div class="card-buttons">
           <a href="#" class="btn docs">Read Docs</a>
@@ -326,8 +326,8 @@
         </div>
       </div>
 
-      <div class="reaction-card" data-video="./assets/videos/Chemicals/liquidNitrogen.mp4">
-        <img src="./assets/images/Chemicals/liquidNitrogen.jpg" />
+      <div class="reaction-card" data-video="Public/assets/videos/Chemicals/liquidNitrogen.mp4">
+        <img src="Public/assets/images/Chemicals/liquidNitrogen.jpg" />
         <h3>Liquid Nitrogen Reaction</h3>
         <div class="card-buttons">
           <a href="#" class="btn docs">Read Docs</a>
@@ -335,8 +335,8 @@
         </div>
       </div>
 
-      <div class="reaction-card" data-video="./assets/videos/Chemicals/phenolphthalein.mp4">
-        <img src="./assets/images/Chemicals/Phenolphthalein.jpeg" />
+      <div class="reaction-card" data-video="Public/assets/videos/Chemicals/phenolphthalein.mp4">
+        <img src="Public/assets/images/Chemicals/Phenolphthalein.jpeg" />
         <h3>Phenolphthalein Reaction</h3>
         <div class="card-buttons">
           <a href="#" class="btn docs">Read Docs</a>
@@ -344,8 +344,8 @@
         </div>
       </div>
 
-      <div class="reaction-card" data-video="./assets/videos/Chemicals/copperammonia.mp4">
-        <img src="./assets/images/Chemicals/copper.jpeg" />
+      <div class="reaction-card" data-video="Public/assets/videos/Chemicals/copperammonia.mp4">
+        <img src="Public/assets/images/Chemicals/copper.jpeg" />
         <h3>Copper + Ammonia</h3>
         <div class="card-buttons">
           <a href="#" class="btn docs">Read Docs</a>
@@ -353,8 +353,8 @@
         </div>
       </div>
 
-      <div class="reaction-card" data-video="./assets/videos/Chemicals/liquidNitrogen.mp4">
-        <img src="./assets/images/Chemicals/liquidNitrogen.jpg" />
+      <div class="reaction-card" data-video="Public/assets/videos/Chemicals/liquidNitrogen.mp4">
+        <img src="Public/assets/images/Chemicals/liquidNitrogen.jpg" />
         <h3>Liquid Nitrogen Reaction</h3>
         <div class="card-buttons">
           <a href="#" class="btn docs">Read Docs</a>
@@ -500,7 +500,7 @@
 
 
       <div class="footer-logo">
-        <img src="./assets/images/logo.png" alt="VirtualXLab Logo" />
+        <img src="Public/assets/images/logo.png" alt="VirtualXLab Logo" />
         <p>Empowering Future Scientists with Virtual Exploration</p>
       </div>
 
@@ -544,10 +544,10 @@
   </footer>
 
   <script type="module" src="./script.js"></script>
-  <script type="module" src="./assets/scripts/microscope3d.js"></script>
-  <script type="module" src="./assets/scripts/chemicals.js"></script>
-  <script type="module" src="./assets/scripts/navbar.js"></script>
-  <script type="module" src="./assets/scripts/brain3d.js"></script>
+  <script type="module" src="Public/assets/scripts/microscope3d.js"></script>
+  <script type="module" src="Public/assets/scripts/chemicals.js"></script>
+  <script type="module" src="Public/assets/scripts/navbar.js"></script>
+  <script type="module" src="Public/assets/scripts/brain3d.js"></script>
 
 </body>
 
