--- a/exhibition/lab.html
+++ b/exhibition/lab.html
@@ -241,7 +241,7 @@
   <header>
 
     <div class="logo">
-      <a href="/"><img src="/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
+      <a href="/"><img src="Public/assets/images/logo.png" alt="VirtualX Lab Logo" /></a>
     </div>
 
     <nav>
@@ -509,9 +509,9 @@
         <h4>Quick Links</h4>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="./lab.html">Lab</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="/lab.html">Lab</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/contact.html">Contact</a></li>
         </ul>
       </div>
 
@@ -543,7 +543,7 @@
     </div>
   </footer>
 
-  <script type="module" src="./script.js"></script>
+  <script type="module" src="/script.js"></script>
   <script type="module" src="Public/assets/scripts/microscope3d.js"></script>
   <script type="module" src="Public/assets/scripts/chemicals.js"></script>
   <script type="module" src="Public/assets/scripts/navbar.js"></script>
